# sensor_compute_nr

./: CMakeLists.txt  README.md  package.xml  plot.py
include/: central_node.hpp  sensor_node.hpp
launch/: launch_sensor.launch.py
src/: central_node.cpp  sensor_node.cpp
