<package format="3">
  <name>sensor_compute</name>
  <version>0.0.1</version>
  <description>sin sensor compute</description>
  <maintainer email="vaishnavi.s2702@gmail.com">Vaishnavi</maintainer>
  <license>Apache-2.0</license>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>rosidl_default_runtime</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
